[package]
name = "mpt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.0"
serlp = { git = "https://github.com/M4tsuri/serlp" }
serde = { version = "1.0", features = ['derive'] }
serde_bytes = "0.11"
generic-array = "0.14.5"
typenum = "1.15.0"
array-init = "2.0.0"
hex = "0.4.3"

[dev-dependencies]
num-bigint = "0.4.3"
